<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CadastrarActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_person_add"
        app:layout_constraintBottom_toTopOf="@+id/cadastro_ti_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cadastro_ti_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cadastro_ti_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cadastro_edt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_completo"
            android:inputType="text"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cadastro_ti_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cadastro_ti_senha"
        app:layout_constraintEnd_toEndOf="@+id/cadastro_ti_nome"
        app:layout_constraintStart_toStartOf="@+id/cadastro_ti_nome"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_ti_nome">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cadastro_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cadastro_ti_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cadastro_btn_salvar"
        app:layout_constraintEnd_toEndOf="@+id/cadastro_ti_email"
        app:layout_constraintStart_toStartOf="@+id/cadastro_ti_email"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_ti_email"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cadastro_edt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:elevation="6dp"
        android:id="@+id/cadastro_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/cadastro_btn_salvar"
        app:layout_constraintEnd_toEndOf="@+id/cadastro_btn_salvar"
        app:layout_constraintStart_toStartOf="@+id/cadastro_btn_salvar"
        app:layout_constraintTop_toTopOf="@+id/cadastro_btn_salvar" />

    <Button
        android:id="@+id/cadastro_btn_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/salvar"
        app:layout_constraintBottom_toTopOf="@+id/cadastro_btn_cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_ti_senha"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/cadastro_btn_cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_btn_salvar"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

</android.support.constraint.ConstraintLayout>